[workspace]
resolver = "2"
members = ["clients/rust", "interface", "pinocchio", "program"]

[workspace.metadata.cli]
solana = "2.3.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
