[workspace]
resolver = "2"
members = ["clients/rust", "interface", "program"]

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "custom-heap", "custom-panic"))',
]

[workspace.metadata.cli]
solana = "3.1.8"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.toolchains]
nightly = "nightly-2026-01-22"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false
