[package]
name = "spl-memo-interface"
version = "2.0.0"
description = "Solana Program Library Memo Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-instruction = "3.0.0"
solana-pubkey = "4.0.0"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
