[package]
name = "spl-memo-interface"
version = "2.1.0"
description = "Solana Program Library Memo Interface"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/memo"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-instruction = "3.4.0"
solana-pubkey = "4.2.0"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
