[package]
name = "spl-memo-interface"
version = "2.1.0"
description = "Solana Program Library Memo Interface"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/memo"
license = "Apache-2.0"
edition = "2021"

[features]
cpi = ["dep:solana-account-view", "dep:solana-instruction-view", "dep:solana-program-error"]
instruction = ["dep:solana-instruction"]

[dependencies]
solana-account-view = { version = "2.0", optional = true }
solana-address = { version = "2.6", features = ["decode"] }
solana-instruction = { version = "3.4.0", optional = true }
solana-instruction-view = { version = "2.1", features = ["cpi"], optional = true }
solana-program-error = { version = "3.0", optional = true }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
