[package]
name = "p-memo"
version = "0.0.0"
description = "A pinocchio-based Memo program"
repository = "https://github.com/febo/p-memo"
license = "Apache-2.0"
edition = "2021"
readme = "./README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.solana]
program-id = "PMemo11111111111111111111111111111111111111"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[dependencies]
pinocchio = "0.9"
pinocchio-log = "0.5"

[dev-dependencies]
mollusk-svm = "0.4"
solana-account = "2.2.1"
solana-instruction = "3.0.0"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
