[package]
name = "p-memo"
version = "0.0.0"
description = "A pinocchio-based Memo program"
repository = "https://github.com/febo/p-memo"
license = "Apache-2.0"
edition = "2021"
readme = "./README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.solana]
program-id = "PMemo11111111111111111111111111111111111111"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[dependencies]
pinocchio = "0.10"
solana-program-log = "1.1"

[dev-dependencies]
mollusk-svm = "0.10"
solana-account = "4.0.0"
solana-instruction = "3.1.0"
solana-program-error = "3.0.0"
solana-pubkey = "4.0.0"
