[package]
name = "spl-memo"
version = "6.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-account-info = "2.3.0"
solana-instruction = "2.2.1"
solana-msg = "3.0.0"
solana-program-entrypoint = "2.3.0"
solana-program-error = "2.2.2"
solana-pubkey = "2.2.1"
spl-memo-interface = { path = "../interface", version = "1.0.0" }

[dev-dependencies]
solana-program-test = "2.3.6"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "MemoSq4gqABAXKb96qnH8TysNcWxMyWCqXgDLGmfcHr"
