[package]
name = "spl-memo"
version = "6.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-account-info = "3.1.0"
solana-instruction = "3.2.0"
solana-msg = "3.1.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-pubkey = "4.1.0"
spl-memo-interface = { version = "2.0.0", path = "../interface" }

[dev-dependencies]
mollusk-svm = "0.10.3"
solana-account = "3.4.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "MemoSq4gqABAXKb96qnH8TysNcWxMyWCqXgDLGmfcHr"
