[package]
name = "spl-memo-client"
version = "0.1.0"
description = "A generated Rust library for the Memo program"
repository = "https://github.com/solana-program/memo"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []

[dependencies]
borsh = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
solana-account-info = "3.1.1"
solana-address = { version = "~2.4", features = [
  'borsh',
  'copy',
  'curve25519',
  'decode',
] }
solana-cpi = "3.1.0"
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
spl-collections = { version = "^0.1", features = ["borsh"] }
thiserror = "^2.0"
